@@ -1,3 +1,8 @@
+2010-09-16  Rudy Neeser  <rudy.neeser@gmail.com>
+
+	* operations.lisp (c-): Added the ability to subtract a constant
+	to a vector, or to "subtract" a vector from a constant.
+
 2010-09-15  Rudy Neeser  <rudy.neeser@gmail.com>
 
 	* operations.lisp (c+): Added the ability to add a constant to a
